--- a/src/app/common-module/page-title-search/page-title-search.component.html
+++ b/src/app/common-module/page-title-search/page-title-search.component.html
@@ -1,7 +1,7 @@
 <div class="p-4 ">
   <div class="grid grid-cols-2 justify-items-stretch " >
     <span class="justify-self-start title-page" >{{title}}</span>
-    <i data-feather="more-vertical"  class="justify-self-end icon-menu" ></i>
+    <i data-feather="more-horizontal"  class="justify-self-end icon-menu" ></i>
   </div>
 
   <div class="grid grid-cols-3 justify-items-stretch " >
