--- a/src/app/components/my-service-menu/my-service-menu.component.html
+++ b/src/app/components/my-service-menu/my-service-menu.component.html
@@ -1,58 +1,92 @@
-<div class="grid grid-cols-7 justify-items-stretch main-box">
-  <div class="text-center grid">
+<div *ngIf="winHeight > 760"  class="grid grid-cols-7 justify-items-stretch main-box">
+  <div class="text-center grid" *ngFor="let item of menuItem"  (click)="selectedMenu(item.type)" > 
     <span class="icon-menu" > 
-      <img src="../../../assets/svgs/all-service.svg" />
+      <img src="../../../assets/svgs/{{item.type}}.svg" />
     </span>
-    <span class="title-service title-service-active " > همه سرویس ها </span>
-    <span class="title-sub-service title-sub-service-active text-center" > 25 سرویس</span>
-  </div>
-
-  <div  class="text-center grid">
-    <span class="icon-menu" > 
-      <img src="../../../assets/svgs/Hosting.svg" />
-    </span>
-    <span class="title-service title-service-disable">Hosting </span>
-    <span class="title-sub-service title-sub-service-disable text-center" > 9 سرویس</span>
-  </div>
-
-  <div class="text-center grid">
-    <span class="icon-menu" > 
-      <img src="../../../assets/svgs/Domain.svg" />
-    </span>
-    <span class="title-service title-service-disable"> Domain </span>
-    <span class="title-sub-service title-sub-service-disable text-center"> 2 سرویس</span>
-  </div>
-
-
-  <div class="text-center grid " >
-    <span class="icon-menu" > 
-      <img src="../../../assets/svgs/Server.svg" />
-    </span>
-    <span  class="title-service title-service-disable"> Server </span>
-    <span class="title-sub-service title-sub-service-disable text-center" > 15 سرویس</span>
-  </div>
-
-  <div class="text-center  grid" >
-    <span class="icon-menu" > 
-      <img src="../../../assets/svgs/SSl.svg" />
-    </span>
-    <span class="title-service title-service-disable" >SSL </span>
-    <span class="title-sub-service title-sub-service-disable text-center"> 10 سرویس</span>
-  </div>
-  
-  <div class="text-center  grid" >
-    <span class="icon-menu" > 
-      <img src="../../../assets/svgs/CDN.svg" />
-    </span>
-    <span class="title-service title-service-disable"> CDN </span>
-    <span class="title-sub-service title-sub-service-disable text-center" > 10 سرویس</span>
-  </div>
-
-  <div class="text-center  grid" >
-    <span class="icon-menu" > 
-      <img src="../../../assets/svgs/Other.svg" />
-    </span>
-    <span class="title-service title-service-disable" > سایر محصولات  </span>
-    <span class="title-sub-service title-sub-service-disable text-center"> 10 سرویس</span>
+    <span class="title-service " [ngClass]=" selectedType == item.type ? 'title-service-active' : 'title-service-disable'"  > {{item.title}}</span>
+    <span class="title-sub-service text-center" [ngClass]="selectedType == item.type ? 'title-sub-service-active' : 'title-sub-service-disable'" > {{item.count}} سرویس</span>
   </div>
 </div>
+
+
+<nz-tabset class="flex-auto" [nzTabPosition]="nzTabPosition" *ngIf="winHeight <= 760"  nzCentered>
+  <nz-tab
+    *ngFor="let tab of menuItem"
+    [nzTitle]="tab.title"
+    (nzSelect)="selectedtab(['select', tab.type])" >
+  </nz-tab>
+</nz-tabset>
+
+
+
+
+
+<!-- <div class="text-center grid">
+  <span class="icon-menu" > 
+    <img src="../../../assets/svgs/all-service.svg" />
+  </span>
+  <span class="title-service title-service-active " > همه سرویس ها </span>
+  <span class="title-sub-service title-sub-service-active text-center" > 25 سرویس</span>
+</div>
+
+<div  class="text-center grid">
+  <span class="icon-menu" > 
+    <img src="../../../assets/svgs/Hosting.svg" />
+  </span>
+  <span class="title-service title-service-disable">Hosting </span>
+  <span class="title-sub-service title-sub-service-disable text-center" > 9 سرویس</span>
+</div>
+
+<div class="text-center grid">
+  <span class="icon-menu" > 
+    <img src="../../../assets/svgs/Domain.svg" />
+  </span>
+  <span class="title-service title-service-disable"> Domain </span>
+  <span class="title-sub-service title-sub-service-disable text-center"> 2 سرویس</span>
+</div>
+
+
+<div class="text-center grid " >
+  <span class="icon-menu" > 
+    <img src="../../../assets/svgs/Server.svg" />
+  </span>
+  <span  class="title-service title-service-disable"> Server </span>
+  <span class="title-sub-service title-sub-service-disable text-center" > 15 سرویس</span>
+</div>
+
+<div class="text-center  grid" >
+  <span class="icon-menu" > 
+    <img src="../../../assets/svgs/SSl.svg" />
+  </span>
+  <span class="title-service title-service-disable" >SSL </span>
+  <span class="title-sub-service title-sub-service-disable text-center"> 10 سرویس</span>
+</div>
+
+<div class="text-center  grid" >
+  <span class="icon-menu" > 
+    <img src="../../../assets/svgs/CDN.svg" />
+  </span>
+  <span class="title-service title-service-disable"> CDN </span>
+  <span class="title-sub-service title-sub-service-disable text-center" > 10 سرویس</span>
+</div>
+
+<div class="text-center  grid" >
+  <span class="icon-menu" > 
+    <img src="../../../assets/svgs/Other.svg" />
+  </span>
+  <span class="title-service title-service-disable" > سایر محصولات  </span>
+  <span class="title-sub-service title-sub-service-disable text-center"> 10 سرویس</span>
+</div> -->
+
+
+
+
+
+
+<!-- <nz-tab class="flex-auto" (nzSelect)="selectedtab(['select', 'all'])" nzTitle="همه سرویس ها"></nz-tab>
+<nz-tab class="flex-auto" (nzSelect)="selectedtab(['select', 'Hosting'])" nzTitle="Hosting"></nz-tab>
+<nz-tab class="flex-auto" (nzSelect)="selectedtab(['select', 'Domain'])" nzTitle="Domain"></nz-tab>
+<nz-tab class="flex-auto" (nzSelect)="selectedtab(['select', 'Server'])" nzTitle="Server"></nz-tab>
+<nz-tab class="flex-auto" (nzSelect)="selectedtab(['select', 'SSL'])" nzTitle="SSL"></nz-tab>
+<nz-tab class="flex-auto" (nzSelect)="selectedtab(['select', 'CDN'])" nzTitle="CDN"></nz-tab>
+<nz-tab class="flex-auto" (nzSelect)="selectedtab(['select', 'Other'])" nzTitle="سایر محصولات"></nz-tab> -->
